# tachikoma

./: .env.example  .gitignore  DESKTOP_CHECKLIST.md  MEJORAS_APLICADAS.md  NEURO_DESKTOP_SETUP.md  README.md  README_COMPLETO.md  TESTING.md  TROUBLESHOOTING_REMOTE_ACCESS.md  dev.sh  diagnose.sh  docker-compose.dev.yml  docker-compose.watch.yml  docker-compose.yml  fix-ollama.sh  fix-remote-access.sh  setup.sh  start.sh  stop.sh  test_code.rs
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: cd-release.yml  ci.yml
config/searxng/: settings.yml
local-themes/: MODERN_THEME.md  README.md
local-themes/modern/: 404.html  base.html  index.html  macros.html  page_with_header.html  preferences.html  results.html  stats.html
local-themes/modern/result_templates/: default.html
local-themes/modern/static/: modern-theme.css  sxng-core.min.js.br  sxng-ltr.min.css.br  sxng-rss.min.css.br  sxng-rtl.min.css.br
neuro-admin/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
neuro-admin/src/: App.tsx  i18n.ts  index.css  main.tsx
neuro-admin/src/api/: client.ts
neuro-admin/src/components/: Layout.tsx  MemoryModal.tsx
neuro-admin/src/constants/: graph.ts  graphConfig.ts
neuro-admin/src/hooks/: useCameraRotation.ts  useDimensions.ts  useGraphData.ts  useGraphEvents.ts  useGraphForces.ts  useHoverState.ts  useNodeRenderer.ts  useTooltip.ts
neuro-admin/src/pages/: DashboardPage.tsx  GraphPage.tsx  MemoriesPage.tsx
neuro-admin/src/stores/: themeStore.ts
neuro-admin/src/types/: graph.ts
neuro-admin/src/utils/: graphTransform.ts
neuro-agent/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md
neuro-agent/src/: config.rs  executor.rs  handlers.rs  main.rs  routes.rs  searxng.rs
neuro-backend/: Cargo.toml  build.rs
neuro-backend/src/: main.rs
neuro-backend/src/application/: mod.rs
neuro-backend/src/application/services/: agent_orchestrator.rs  chat_service.rs  knowledge_extractor.rs  memory_service.rs  mod.rs  model_manager.rs
neuro-backend/src/domain/: errors.rs  mod.rs
neuro-backend/src/domain/entities/: agent.rs  chat.rs  checklist.rs  kanban.rs  memory.rs  mod.rs  music.rs
neuro-backend/src/domain/ports/: checklist_repository.rs  command_executor.rs  kanban_repository.rs  llm_provider.rs  memory_repository.rs  mod.rs  music_repository.rs  search_provider.rs
neuro-backend/src/domain/value_objects/: mod.rs  model_tier.rs  relation.rs
neuro-backend/src/infrastructure/: config.rs  mod.rs  request_logger.rs
neuro-backend/src/infrastructure/api/: dto.rs  events.rs  middleware.rs  mod.rs  routes.rs
neuro-backend/src/infrastructure/api/handlers/: agent.rs  chat.rs  checklist.rs  graph.rs  kanban.rs  llm.rs  memory.rs  mod.rs  music.rs  proxy.rs  system.rs  voice.rs
neuro-backend/src/infrastructure/database/: mod.rs  pool.rs  surreal_checklist_repository.rs  surreal_kanban_repository.rs  surreal_music_repository.rs  surreal_repository.rs
neuro-backend/src/infrastructure/services/: command_executor.rs  mod.rs  ollama.rs  searxng.rs  voice_engine.rs  voice_engine_http.rs
neuro-backend/tests/: integration_tests.rs
neuro-calendar/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md
neuro-calendar/src/: config.rs  handlers.rs  main.rs  models.rs  routes.rs
neuro-chat/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md
neuro-chat/src/: backend_client.rs  config.rs  db.rs  handlers.rs  main.rs  memory_client.rs  models.rs  ollama.rs  routes.rs
neuro-checklists/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md
neuro-checklists/src/: backend_client.rs  config.rs  db.rs  handlers.rs  main.rs  models.rs  routes.rs
neuro-docs/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md
neuro-docs/src/: config.rs  handlers.rs  main.rs  models.rs  routes.rs
neuro-image/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md
neuro-image/src/: config.rs  handlers.rs  main.rs  models.rs  routes.rs
neuro-kanban/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md
neuro-kanban/src/: backend_client.rs  config.rs  handlers.rs  main.rs  models.rs  routes.rs
neuro-memory/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md
neuro-memory/src/: config.rs  db.rs  handlers.rs  main.rs  models.rs  routes.rs
neuro-music/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md
neuro-music/src/: audio_dsp.rs  backend_client.rs  config.rs  cover_art.rs  db.rs  downloader.rs  events.rs  handlers.rs  main.rs  metadata_enricher.rs  models.rs  routes.rs  youtube.rs
neuro-note/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md
neuro-note/src/: config.rs  handlers.rs  main.rs  models.rs  routes.rs
neuro-pomodoro/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md
neuro-pomodoro/src/: backend_client.rs  config.rs  handlers.rs  main.rs  memory_store.rs  models.rs  routes.rs
neuro-ui/: .env.development  .env.example  DESKTOP_BUILD.md  QUICKSTART_DESKTOP.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
neuro-ui/src/: App.tsx  i18n.ts  index.css  main.tsx
neuro-ui/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
neuro-ui/src-tauri/icons/: README.md  create_placeholder_icons.sh
neuro-ui/src/api/: client.ts
neuro-ui/src/components/: ChatInput.test.tsx  ChatInput.tsx  ChatMessage.tsx  ChecklistDetector.tsx  NoConnectionScreen.tsx  Sidebar.tsx  StreamingText.tsx  TypingIndicator.tsx  WelcomeScreen.tsx
neuro-ui/src/hooks/: index.ts  useConnectionStatus.ts  useMediaSession.ts  useMusicEvents.ts  useVoiceStream.ts
neuro-voice/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md
neuro-voice/src/: config.rs  handlers.rs  main.rs  opus_encoder.rs  text_cleaner.rs  voice_engine.rs
neuro-voice/src/audio_effects/: README.md  chain.rs  chorus.rs  compressor.rs  deesser.rs  distortion.rs  filters.rs  flanger.rs  formant.rs  limiter.rs  mod.rs  pitch_shift.rs  reverb.rs  ring.rs  stereo.rs  vocoder.rs
voice-service/: Dockerfile  main.py  requirements.txt
zbrain/: Cargo.toml
zbrain/src/: api.rs  config.rs  main.rs  shell.rs
(+75 files in other folders)
