[package]
name = "neuro-agent"
version = "0.1.0"
edition = "2021"
description = "Agent tools microservice for NEURO-OS (search, commands)"
authors = ["NEURO-OS Team"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full", "process"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
urlencoding = "2"

# HTTP client for Searxng
reqwest = { version = "0.12", features = ["json"] }
