# =============================================================================
# NEURO-OS Backend - Rust Axum REST API
# =============================================================================
# Central orchestrator for the NEURO-OS AI ecosystem.
# Built with Axum, following Hexagonal/Clean Architecture principles.
# =============================================================================

[package]
name = "neuro-backend"
version = "0.1.0"
edition = "2021"
authors = ["NEURO-OS Team"]
description = "Central orchestrator for the NEURO-OS AI ecosystem"
license = "MIT"
readme = "README.md"

[dependencies]
# =============================================================================
# Web Framework & HTTP
# =============================================================================
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1.40", features = ["full", "tracing"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
hyper = { version = "1.4", features = ["full"] }

# =============================================================================
# Serialization & Deserialization
# =============================================================================
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# =============================================================================
# Database - SurrealDB
# =============================================================================
surrealdb = { version = "2.0", features = ["kv-mem"] }

# =============================================================================
# Error Handling & Logging
# =============================================================================
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# =============================================================================
# HTTP Client for External Services (Ollama, Searxng)
# =============================================================================
reqwest = { version = "0.12", features = ["json", "stream"] }

# =============================================================================
# System Information (VRAM detection)
# =============================================================================
sysinfo = "0.31"
nvml-wrapper = "0.10"

# =============================================================================
# Utilities
# =============================================================================
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
once_cell = "1.19"
dotenvy = "0.15"
tokio-stream = "0.1"
async-stream = "0.3"

# =============================================================================
# Command Execution (for safe local executor)
# =============================================================================
shell-words = "1.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
