[package]
name = "neuro-chat"
version = "0.1.0"
edition = "2021"
description = "Chat and LLM interaction microservice for NEURO-OS"
authors = ["NEURO-OS Team"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
surrealdb = { version = "1.5", features = ["kv-mem"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async utilities
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
