[package]
name = "tachikoma-pomodoro"
version = "0.1.0"
edition = "2021"
description = "Pomodoro timer microservice for Tachikoma-OS"
authors = ["Tachikoma-OS Team"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP Client (for backend data layer)
reqwest = { version = "0.11", features = ["json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
