[package]
name = "zbrain"
version = "0.1.0"
edition = "2021"
description = "Z-Brain: AI-Shell CLI wrapper for NEURO-OS"
authors = ["NEURO-OS Team"]
license = "MIT"

[[bin]]
name = "zbrain"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"
colored = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
directories = "5.0"
toml = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4"] }
